# corona-simulator

./: CMakeLists.txt  Makefile  OpenMPStrongBash  README.md  Timer.cpp  Timer.h  area.cpp  area.h  mpi.cpp  mpibash  openMPStrongBash  openMPWeakBash  particle.cpp  particle.h  serial.cpp
